# Temporary

./: .buildinfo  .bumpversion.cfg  .gitattributes  .gitignore  CHANGELOG.md  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/actions/checkout-local-project/: action.yml
.github/actions/checkout-project/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/publish-docs/: action.yml
.github/actions/publish-public-docs/: action.yml
.github/actions/release_public_repository/: action.yml
.github/scripts/: get_last_tag.py
.github/workflows/: condition_release.yml  conditional_release.yml  dummy.yml  get_version.py  publish.yml  publish_doc.yml  release.yml
_sources/: index.rst.txt
docs/source/: index.rst
poetry_template/: __init__.py
src/: README.md  setup.cfg
src/docs/source/: index.rst
