[tool.poetry]
name = "poetry-template"
version = "10.8.8a0"
description = "A minimal, strictly structured Python project template."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Python-Project-Template"
repository = "https://github.com/MislavJaksic/Python-Project-Template"
documentation = "https://github.com/MislavJaksic/Python-Project-Template"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
loguru = "^0.7.0"
bumpversion = "^0.6.0"
poetry-bumpversion = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
pytest-integration = "0.2.3"
Sphinx = "^5.0.0"
black = "^23.3.0"
mypy = "^1.2.0"

[tool.poetry.scripts]
poetry-template = "poetry_template.runner:run"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
# plugins = pydantic.mypy

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry_bumpversion.file."poetry_template/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
# search = '__version__ = "{current_version}"'
# replace = '__version__ = "{new_version}"'
